--- a/style.css
+++ b/style.css
@@ -21,20 +21,38 @@ h1{
   border-bottom:double 2px #1e1e1e;
   }
 
-#center {
-  margin: auto;
+.center {
+  /* width: 80%;
+  padding: 10px;
+  width: 80%;
+  margin: 15px auto 20px auto;
+  padding: 10px; */
+  padding: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card{
   height:160px;
   width:120px;
   margin:8px;
-  float:left;
+  display: inline-flex;
+  justify-content: center;
   border-radius: 10px;
-  box-shadow: rgba(72,72,72,0.2) 2px 3px 0 0;
+  box-shadow: 2 2 10px rgba(30, 30, 30, .2);
   background: #eee;
-  border:solid 1px rgba(90,9,77,0.2);
+  border:solid 1px rgba(90,9,77,0.4);
   border-radius: 8px;
+  cursor: pointer;
+}
+
+.card.correct {
+  cursor: auto;
+  border: 1px solid #1e1e1e;
+  -moz-box-shadow:    inset 0 0 20px rgba(30, 30, 30, .9);
+   -webkit-box-shadow: inset 0 0 20px rgba(30, 30, 30, .9);
+   box-shadow:         inset 0 0 20px rgba(30, 30, 30, .9);
 }
 
 .card-image {
@@ -46,31 +64,22 @@ h1{
   border: 1px solid #bbb;
   background-size: cover;
   background-position: center;
+  -moz-box-shadow:    inset 0 0 10px rgba(30, 30, 30, .3);
+  -webkit-box-shadow: inset 0 0 10px rgba(30, 30, 30, 3);
+  box-shadow:         inset 0 0 10px rgba(30, 30, 30, .3);
+
 }
 
 #gameArea {
-  margin: auto;
-  width: 50%;
-  /* border: 3px solid #1e1e1e; */
-  padding: 10px;
-  margin: auto;
-  width: 80%;
-  height: 640px;
-  /* background: rgba(100, 144, 214, .9); */
-  margin: 15px auto 20px auto;
-  padding: 10px;
-  /* -moz-border-radius: 10px; */
-  /* -webkit-border-radius: 10px; */
-  /* border-radius: 10px; */
-}
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 
-.card-image.blank {
-  /* just blank realnes */
 }
 
 /* cards imagers */
-.card-image.adoreDelano { background-image: url(images/adoreDelano.jpeg)}
-.card-image.alyssaEdwards { background-image: url(images/alyssaEdwards.jpeg)}
+.flip.card .card-image.adoreDelano { background-image: url(images/adoreDelano.jpeg)}
+.flip.card .card-image.alyssaEdwards { background-image: url(images/alyssaEdwards.jpeg)}
 .card-image.jigglyCaliente { background-image: url(images/jigglyCaliente.jpeg)}
 .card-image.jinxMonsoon { background-image: url(images/jinxMonsoon.jpeg)}
 .card-image.jujubee { background-image: url(images/jujubee.jpeg)}
