--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ body{
   background: rgb(229, 91, 91);
 }
 
+.winner {
+  font-size: 3em;
+  font-weight: 600;
+  background:rgba(255, 255, 255, 0.9);
+  border: 2px double#1e1e1e;
+  text-align: center;
+  border-radius: 5px;
+  -moz-box-shadow:      inset 0 0 20px rgba(30, 30, 30, .4);
+  -webkit-box-shadow:   inset 0 0 20px rgba(30, 30, 30, .4);
+  box-shadow:          inset 0 0 20px rgba(30, 30, 30, .4);
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
 h1{
   text-align:center;
   font-size:2em; 
